Fix visibility of multiple locations on add location and user forms.

--- a/docroot/modules/custom/erpw_custom/css/common.css
+++ b/docroot/modules/custom/erpw_custom/css/common.css
@@ -38,3 +38,7 @@
   text-decoration: underline;
   margin-top: 10px;
 }
+
+.admin-user .disable-country-select-default {
+  pointer-events: auto;
+}
